<resources>
    <string name="app_name">皮城金融</string>


    <!-- main  -->
    <string name="cpyg">产品预告</string>
    <string name="dcxa">大城小爱</string>
    <string name="stby">商通保盈</string>
    <string name="gtma">国泰民安</string>
    <string name="zlbh">珠联璧合</string>
    <string name="tzjx">投资精选</string>

    <!-- title -->
    <string name="title_user_center">个人中心</string>
    <string name="title_invest_item">投资项目</string>
    <string name="title_more_setting">更多设置</string>

    <!-- setting -->
    <string name="setting_platform_bulletin">平台公告</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_customer_service">客服热线</string>

    <!--item product-->
    <string name="annual_earnings">年化收益</string>
    <string name="project_duration">项目期限</string>
    <string name="total_amount">起投(元)</string>
    <string name="total_amount_wan">起投(万元)</string>

    <!-- error info -->
    <string name="login_expired">登陆过期,请重新登陆</string>
    <string name="network_anomaly">网络异常</string>

    <!-- Gesture code starting -->
    <string name="setup_gesture_code">设置手势密码</string>
    <string name="setup_gesture_pattern">绘制解锁图案</string>
    <string name="setup_gesture_pattern_again">再次绘制解锁图案</string>
    <string name="forget_gesture_code">忘记手势密码?</string>
    <string name="use_other_account_login">用其他账号登录</string>
    <string name="set_gesture_pattern">绘制解锁图案</string>
    <string name="set_gesture_pattern_reason">设置手势密码，防止他人未经授权查看</string>
    <string name="reset_gesture_code">重新设置手势密码</string>
    <!-- End -->

    <!-- other info -->
    <string name="realname_info">一个身份信息只能绑定一个账号；\n请确保已满16周岁，本平台充值/提现仅支持二代身份证办理的银行卡；\n每账户最多提交三次验证申请,如被锁定,请联系在线客服或拨打400-101-3339。</string>
</resources>
