<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/list_selector">


    <ImageView
        android:id="@+id/tqhk"
        android:layout_width="@dimen/item_product_rtv_image_width"
        android:layout_height="@dimen/item_product_rtv_image_height"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
         />

    <TextView
        android:id="@+id/goodname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:padding="3dp"
        tools:text="大城小爱NO.94-2016"
        android:textColor="@color/item_product_title_text_color"
        android:textSize="@dimen/item_product_title_text_size"
        android:fontFamily="微软雅黑"
        android:layout_above="@+id/layoutc"
        android:id="@+id/name"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        tools:text="先息后本(月)"
        android:textColor="@color/item_product_repayment_text_color"
        android:textSize="@dimen/item_product_repayment_text_size"
        android:background="@drawable/purple_bg"
        android:fontFamily="微软雅黑"
        android:id="@+id/repayment"
        android:layout_above="@+id/layoutc"
        android:layout_toRightOf="@+id/name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="福利"
        android:textColor="@color/item_product_repayment_text_color"
        android:textSize="@dimen/item_product_repayment_text_size"
        android:background="@drawable/bg_corner_orange"
        android:fontFamily="微软雅黑"
        android:id="@+id/welfare"
        android:layout_above="@+id/layoutc"
        android:layout_toRightOf="@+id/repayment"/>

    <LinearLayout
        android:id="@+id/layoutc"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/goodname"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/annual_earnings"
                android:textColor="@color/item_product_text_color_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="6.90"
                    android:textColor="@color/item_product_text_color"
                    android:textSize="@dimen/item_product_text_size" />

                <TextView
                    android:id="@+id/income1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="#FD7C21"
                    android:textSize="16dp" />
            </LinearLayout>


        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/project_duration"
                android:textColor="@color/item_product_text_color_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12"
                    android:textColor="@color/item_product_text_color"
                    android:textSize="@dimen/item_product_text_size" />

                <TextView
                    android:id="@+id/month1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#FD7C21"
                    android:textSize="16dp" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/total_amount"
                android:textColor="@color/item_product_text_color_gray" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                tools:text="2000.00"
                android:textColor="@color/item_product_text_color"
                android:textSize="@dimen/item_product_text_size" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <com.pcjinrong.pcjr.widget.ProgressWheel
                android:id="@+id/pw_spinner"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                ProgressWheel:pwRimColor="#D3D3D3"
                ProgressWheel:pwBarLength="60dp"
                ProgressWheel:pwBarColor="#FD5A4A"
                ProgressWheel:pwBarWidth="4dp"
                ProgressWheel:pwRimWidth="4dp"
                ProgressWheel:pwSpinSpeed="3dp"
                ProgressWheel:pwContourColor="#D3D3D3"/>

            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                tools:text="15%"
                android:textColor="@color/item_product_text_color"
                android:textSize="@dimen/item_product_rate_text_size"
                />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>